# dropwire

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
core/: Cargo.toml
core/src/: catalog.rs  config.rs  control.rs  endpoint.rs  error.rs  identity.rs  lib.rs  progress.rs  receive.rs  send.rs  store.rs
core/tests/: control_stream.rs  history.rs  multi_transfer.rs  one_to_one.rs  preview.rs  relay.rs  selective.rs  transfer.rs
core/tests/common/: mod.rs
docs/: DESIGN.md  DEVELOPING.md  PLAN.md  PRIVACY.md
infra/: .env.example  README.md  deploy.md
infra/dns/: Dockerfile  config.toml
infra/relay/: Dockerfile  docker-compose.yml  relay.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: dropwire.desktop
src-tauri/src/: lib.rs  main.rs
ui/: app.css  app.js  index.html
www/: 404.html  index.html  llms.txt  robots.txt  script.js  site.webmanifest  sitemap.xml  styles.css
www/guides/: free-wetransfer-alternatives.html  index.html  send-large-files-free.html  share-files-between-mac-and-windows.html  what-is-peer-to-peer-file-transfer.html
