[package]
name = "irohcore"
description = "Dropwire transfer engine: a stable wrapper over iroh 1.0 + iroh-blobs 0.10x."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
iroh.workspace = true
iroh-blobs.workspace = true
iroh-mainline-address-lookup.workspace = true
n0-future.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures-lite.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
walkdir.workspace = true
uuid.workspace = true
data-encoding.workspace = true
url.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tokio-stream = { workspace = true }
